--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,21 @@
-{"name":"반가워요! PWA by VueJS","short_name":"반가워요! PWA by VueJS","theme_color":"#FFFFFF","icons":[{"src":"./img/icons/android-chrome-192x192.png","sizes":"192x192","type":"image/png"},{"src":"./img/icons/android-chrome-512x512.png","sizes":"512x512","type":"image/png"}],"start_url":"./index.html","display":"standalone","background_color":"#FFFFFF","orientation":"portrait"}
+{
+  "name": "나만의 카메라 갤러리 vue2",
+  "short_name": "카메라 갤러리 vue2",
+  "icons": [
+    {
+      "src": "./img/icons/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./img/icons/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "start_url": "./index.html",
+  "display": "standalone",
+  "orientation": "portrait",
+  "background_color": "#ffffff",
+  "theme_color": "#ffffff"
+}
